--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,39 +17,45 @@
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="logo"
-        ><span class="blue-web">Web</span>Studio</a
-      >
-      <nav>
-        <ul class="menu">
-          <li class="menu-item">
-            <a href="./index.html" class="menu-link">Agencja</a>
-          </li>
-          <li class="menu-item">
-            <a href="./portfolio.html" class="menu-link">Portfolio</a>
-          </li>
-          <li class="menu-item"><a href="" class="menu-link">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div>
-        <ul class="contact">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact-link">
-              info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+48111111111" class="contact-link"> +48 111 111 111</a>
-          </li>
-        </ul>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="blue-web">Web</span>Studio</a
+        >
+        <nav>
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">Agencja</a>
+            </li>
+            <li class="menu-item">
+              <a href="./portfolio.html" class="menu-link">Portfolio</a>
+            </li>
+            <li class="menu-item"><a href="" class="menu-link">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div>
+          <ul class="contact">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contact-link">
+                info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+48111111111" class="contact-link">
+                +48 111 111 111</a
+              >
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
-      <section class="baner">
-        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button" class="btn-studio">Zamów usługę</button>
+      <section class="baner section">
+        <div class="container">
+          <h1>EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
+          <button type="button" class="btn-studio">Zamów usługę</button>
+        </div>
       </section>
-      <section class="lorem-ipsum">
+      <section class="lorem-ipsum container section">
         <ul>
           <li>
             <h3>LOREM IPSUM</h3>
@@ -78,111 +87,117 @@
           </li>
         </ul>
       </section>
-      <section class="what-we-do">
-        <h2>Czym się zajmujemy</h2>
+      <section class="what-we-do section">
+        <div class="container">
+          <h2>Czym się zajmujemy</h2>
 
-        <ul>
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Zdjęcie przedstawia ręce osoby piszącej na klawiaturze, obok klawiatury leży schemat narysowany na kartce i kod wyświetlający się na tablecie i części monitora"
-              width="370"
-              height="294" />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="Zdjęcie przedstawia osobe trzymająca telefon oraz laptopa na którym wyświetlają warianty layoutów"
-              width="370"
-              height="294" />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Zdjęcie przedstawia ręce osoby trzymającej tablet z paletą kolorów do wyboru"
-              width="370"
-              height="294" />
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="Zdjęcie przedstawia ręce osoby piszącej na klawiaturze, obok klawiatury leży schemat narysowany na kartce i kod wyświetlający się na tablecie i części monitora"
+                width="370"
+                height="294" />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="Zdjęcie przedstawia osobe trzymająca telefon oraz laptopa na którym wyświetlają warianty layoutów"
+                width="370"
+                height="294" />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="Zdjęcie przedstawia ręce osoby trzymającej tablet z paletą kolorów do wyboru"
+                width="370"
+                height="294" />
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="team">
-        <h2>Nasz zespół</h2>
+      <section class="team section">
+        <div class="container">
+          <h2>Nasz zespół</h2>
 
-        <ul>
-          <li>
-            <figure>
-              <img
-                src="./images/team1.jpg"
-                alt="John Doe Product Designer"
-                width="270"
-                height="260" />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-position">Product Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/team2.jpg"
-                alt="John Doe Frontend Developer"
-                width="270"
-                height="260" />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-position">Frontend Developer</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/team3.jpg"
-                alt="John Doe Marketing"
-                width="270"
-                height="260" />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-position">Marketing</p>
-              </figcaption>
-            </figure>
-          </li>
-          <li>
-            <figure>
-              <img
-                src="./images/team4.jpg"
-                alt="John Doe UI Designer"
-                width="270"
-                height="260" />
-              <figcaption>
-                <p class="name">John Doe</p>
-                <p class="job-position">UI Designer</p>
-              </figcaption>
-            </figure>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <figure>
+                <img
+                  src="./images/team1.jpg"
+                  alt="John Doe Product Designer"
+                  width="270"
+                  height="260" />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job-position">Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/team2.jpg"
+                  alt="John Doe Frontend Developer"
+                  width="270"
+                  height="260" />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job-position">Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/team3.jpg"
+                  alt="John Doe Marketing"
+                  width="270"
+                  height="260" />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job-position">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img
+                  src="./images/team4.jpg"
+                  alt="John Doe UI Designer"
+                  width="270"
+                  height="260" />
+                <figcaption>
+                  <p class="name">John Doe</p>
+                  <p class="job-position">UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-      <a href="./index.html"
-        ><span class="logo"><span class="blue-web">Web</span>Studio</span></a
-      >
-      <address class="address">
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/ZJ2jtGcHfp8Aeqk69"
-              ><p>m. Warszawa, Aleje Jerozolimskie 21</p></a
-            >
-          </li>
-          <li class="contact">
-            <a href="mailto:info@example.com"> info@example.com</a>
-          </li>
-          <li class="contact">
-            <a href="tel:+48111111111"> +48 111 111 111</a>
-          </li>
-        </ul>
-      </address>
+    <footer class="footer section">
+      <div class="container">
+        <a href="./index.html"
+          ><span class="logo"><span class="blue-web">Web</span>Studio</span></a
+        >
+        <address class="address">
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/ZJ2jtGcHfp8Aeqk69"
+                ><p>m. Warszawa, Aleje Jerozolimskie 21</p></a
+              >
+            </li>
+            <li class="contact-footer">
+              <a href="mailto:info@example.com"> info@example.com</a>
+            </li>
+            <li class="contact-footer">
+              <a href="tel:+48111111111"> +48 111 111 111</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
