--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-portfolio">
       <div class="container">
         <ul class="list-btn-portfolio">
           <li>
